# propeller_model

./: LICENSE  README.md  pyproject.toml  requirements.txt  verify_math.py
.github/workflows/: ci.yml
data/validation/: apc10x7_validation.csv  apc10x7_validation.txt  verify_validation.py
docs/: math_summary.md
examples/: run_demo.py
src/propforce/: __init__.py  metrics.py  model.py  optimize.py  utils.py
src/propforce.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_boundary_cases.py  test_model_physics.py  test_numerical_regression.py
